--- a/index-vue.html
+++ b/index-vue.html
@@ -21,6 +21,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js" integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="./style/style.css">
         <title>Vue dischi php</title>
+
+        <style>
+            main {
+                min-height: 100vh;
+            }
+        </style>
+
     </head>
 
     <body>
@@ -30,7 +37,7 @@
             <header>
                 <div class="logo">LOGO</div>
 
-                <select name="" id="">
+                <select @change="changeValue()" v-model="selected" name="" id="">
                     <option disabled value="">Seleziona un genere</option>
                     <option value="all">All</option>
                     <option value="rock">Rock</option>
